<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ebremer</groupId>
    <artifactId>BeakGraph</artifactId>
    <name>BeakGraph</name>
    <version>0.9.1</version>
    <packaging>jar</packaging>
    
    <description>Library for creating Apache Jena Graphs and Datasets backed by Apache Arrow</description>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    
    <issueManagement>
        <system>github</system>
        <url>https://github.com/ebremer/BeakGraph/issues</url>
    </issueManagement>
    
    <developers>
        <developer>
          <id>ebremer</id>
          <name>Erich Bremer</name>
          <email>erich.bremer@stonybrook.edu</email>
          <roles>
              <role>author</role>
          </roles>
        </developer>
    </developers>
    
    <inceptionYear>2021</inceptionYear>
    
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>24</maven.compiler.release>
        <exec.mainClass>com.ebremer.beakgraph.BeakGraph</exec.mainClass>
        <jena.version>5.4.0</jena.version>
        <arrow.version>18.2.0</arrow.version>
        <rocrate4j.version>0.5.0</rocrate4j.version>
        <commons-compress.version>1.27.1</commons-compress.version>
        <log4j.version>2.24.3</log4j.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.4.0-b180830.0359</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>apache-jena-libs</artifactId>
            <type>pom</type>
            <version>${jena.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>11.0.24</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>11.0.24</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-core</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-unsafe</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-algorithm</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-format</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-compression</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>${commons-compress.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.ebremer</groupId>
            <artifactId>RO-Crate4J</artifactId>
            <version>${rocrate4j.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jhdf</groupId>
            <artifactId>jhdf</artifactId>
            <version>0.9.4</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>halcyon</id>
            <name>Halcyon</name>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
        <repository>
            <id>apache</id>
            <name>apache</name>
            <url>https://repository.apache.org/snapshots</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>halcyon</id>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
    </distributionManagement>
</project>
